# quantized

./: .gitattributes  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  RELEASE.md  SECURITY.md  pyproject.toml  run.cmd  run.command
.agents/skills/check-guards/: SKILL.md
.agents/skills/freeze-golden/: SKILL.md
.agents/skills/new-route/: SKILL.md
.agents/skills/port-feature/: SKILL.md
.codex/agents/: guards-reviewer.toml  parity-monitor.toml  parity-verifier.toml  quantized-porter.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  e2e.yml  pypi.yml  release.yml
docs/: opening_origin_files.md  origin_project_format.md  plugins.md
docs/origin_re/: ORIGIN_CONVENTIONS.md  curve_axis_fidelity.md  fidelity_manifest.md  full_data_figure_apply.md  opj_figures.md  opj_windows_section.md  opju_container.md  saved_graph_previews.md  validation_log.md  workbook_graph_builder_fallback.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/e2e/: README.md  playwright.config.ts  tsconfig.json
frontend/e2e/fixtures/: dataset-a.csv  dataset-b.csv  linear-ramp.csv  three-channel.csv  two-channel.csv
frontend/e2e/specs/: annotation-shape-lifecycle.spec.ts  axis-title-limits.spec.ts  channel-axis-drag.spec.ts  curve-restyle.spec.ts  export-roundtrip.spec.ts  folder-organize.spec.ts  graph-builder.spec.ts  (+4 more)
frontend/public/: loading.html
frontend/src/: App.tsx  AppOverlays.tsx  CalcOnlyApp.test.tsx  CalcOnlyApp.tsx  appCommands.test.ts  appCommands.ts  architecture.test.ts  main.tsx  shortcutDisplay.test.ts  useGlobalShortcuts.test.ts  useGlobalShortcuts.ts  useWorkspaceAutosave.test.ts  useWorkspaceAutosave.ts
plans/: GAP_ECOSYSTEM_PLAN.md  GAP_INTERACTION_PLAN.md  GAP_PLOTTYPES_PLAN.md  GAP_TIER3_PLAN.md  GOTO_PLAN.md  GUI_INTERACTION_PLAN.md  M1_SPRINT.md  MAIN_PLAN.md  MULTI_PLOT_PLAN.md  ORIGIN_FILE_DECODE_PLAN.md  ORIGIN_GAP_PLAN.md  PORT_CHECKLIST.md  PORT_PLAN.md  PROJECT_ORGANIZATION_PLAN.md  SOL_FEATURE_GUI_INTERACTION_AUDIT.md  SOL_ORIGINPRO_REPLACEMENT_AUDIT.md  WORKSHEET_PLAN.md  boson-plotter-acceptance-fixes.md  frontend-reuse-library.md  ui-implementation-plan.md
plans/archive/: GAP_ECOSYSTEM_PLAN.md  GAP_INTERACTION_PLAN.md  GAP_PLOTTYPES_PLAN.md  GAP_TIER3_PLAN.md  M1_SPRINT.md  MULTI_PLOT_PLAN.md  ORIGIN_GAP_PLAN.md  PROJECT_ORGANIZATION_PLAN.md  WORKSHEET_PLAN.md  boson-plotter-acceptance-fixes.md  frontend-reuse-library.md  ui-implementation-plan.md
plans/design/: DEFAULTS_AUDIT.md  DESIGN_GUIDE.md  DESIGN_HANDOFF.md  DESIGN_SKILL.md  ORIGIN_GOTO_SURVEY.md  WORKBENCH_KIT.md
src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/quantized/: __init__.py  __main__.py  api.py  app.py  cli.py  datastruct.py  jobs.py  server_launch.py
tests/: conftest.py  test_aggregate_route.py  test_api_baseline.py  test_api_books.py  test_api_calc.py  test_api_corrections.py  test_api_crystallography.py  test_api_database.py  test_api_export.py  test_api_export_page.py  test_api_fit_findxy.py  test_api_fitting.py  test_api_fitting_bumps.py  test_api_fitting_equation.py  test_api_fitting_scan.py  test_api_import_template.py  test_api_import_wizard.py  test_api_lifecycle.py  test_api_magnetometry.py  test_api_parsers.py  test_api_peaks.py  test_api_plot.py  test_api_reductions.py  test_api_reference.py  test_api_reflectivity.py  test_api_report_export.py  test_api_rsm.py  test_api_samples.py  test_api_spectral.py  test_api_statplots.py  test_api_stats.py  test_api_stats_glm_survival_roc.py  test_calc_autoguess.py  test_calc_backgrounds.py  test_calc_baseline.py  test_calc_baseline2.py  test_calc_batch_fit.py  test_calc_bg_region.py  test_calc_bootstrap_integrate.py  test_calc_confband.py  (+152 more)
tests/fixtures/: SrTiO3.cif  csv_xrd.csv  excel_synth.xlsx  lakeshore_synth.csv  ncnr_j395.refl  ncnr_s11_nsf.pnr  ncnr_s3.datA  rigaku_yig.raw  sims_barrier.csv  sims_shared.csv  sims_synth.xlsx  xrdml_attenuation.xrdml  xrdml_coupled_synthetic.xrdml  xrdml_la2nio4.xrdml  xrdml_rsm_synthetic.xrdml  xrdml_snapshot_synthetic.xrdml
tests/golden/: calc_anova1.json  calc_autoguess.json  calc_baseline_als.json  calc_batchfit.json  calc_bgfromfile.json  calc_bgregion.json  calc_cif.json  calc_confband_mean.json  calc_confband_median.json  calc_constants.json  calc_constraints.json  calc_convert.json  calc_convmag_amts.json  calc_convmag_emu_cm3.json  calc_convmag_emu_g.json  calc_convmag_field_oe_t.json  calc_corrections_deriv.json  calc_corrections_mag.json  calc_corrections_xrd.json  calc_cumint.json  calc_curvefit_gauss.json  calc_derivative.json  calc_descriptive.json  calc_dsalg_adivb.json  calc_dsalg_aminusb.json  calc_dsalg_aplusb.json  calc_dsalg_asym.json  calc_dsalg_atimesb.json  calc_element_fe.json  calc_element_o.json  calc_element_props.json  calc_erroradd.json  calc_errordiv.json  calc_errormul.json  calc_errorprop.json  calc_estbg_iter.json  calc_estbg_poly.json  calc_estbg_snip.json  calc_fft_magnitude.json  calc_fft_psd.json  (+91 more)
tools/: audit_defaults.py  smoke_live.py
tools/bench/: bench.py
tools/bundle/: qz-server.spec  qz_entry.py
tools/matlab/: freeze_calc_values.m  freeze_export_extra.m  freeze_hdf5_only.m  freeze_reference_values.m  freeze_xrdml_map2d.m
tools/origin_compare/: README.md  export_origin_graphs.py
tools/origin_trial/: export_annotation_oracle.py  export_axis_ticks.py  export_curve_style_oracle.py  export_graph_extras.py  export_ground_truth.py  export_hc2_oracle.py  export_layer_geometry.py  export_page_dims.py  export_plot_refs.py  generate_specimens.py  generate_specimens2.py  generate_specimens3.py  generate_specimens_style.py  probe_opj_loader.py  score_curve_bindings.py  score_curve_bindings_opj.py
tools/visual/: .gitignore  README.md  acceptance_matrix.mjs  build_compare_artifact.py  gallery.mjs  origin_acceptance.mjs  origin_acceptance.test.mjs  origin_corpus.mjs  origin_figures.mjs  origin_shared.mjs  package-lock.json  package.json  shoot.mjs  spec-defaults-audit.json  spec.example.json
(+927 files in other folders)
