[project]
name = "quantized"
version = "0.3.0"
description = "Clean-architecture Python + React port of the quantized_matlab scientific toolbox (magnetometry / XRD / lab data)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Paige Quarterman" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.7",
    "openpyxl>=3.1",
    "h5py>=3.10",
    "python-multipart>=0.0.32",
    "matplotlib>=3.11.0",
    "periodictable>=1.7",
]

[project.scripts]
qz = "quantized.cli:main"
quantized = "quantized.cli:main"

[project.optional-dependencies]
# Word/PowerPoint report export (#37). MIT-licensed, pure-python. Optional so
# the core install stays lean — io/report_export.py guards these imports and
# LaTeX/HTML export always work; `pip install quantized[office]` enables .docx/.pptx.
office = [
    "python-docx>=1.1",
    "python-pptx>=1.0",
]
# COM "Send to Origin" (item 25) — Windows-only optional, behind QZ_ORIGIN_COM=1
# (architecture guard #10: never a hard dependency, never a CI requirement).
# io/origin_com.py imports win32com lazily and guards its absence; the
# cross-platform fallback (Origin-ASCII / .ogs, always available) is
# io/origin.py. `pip install quantized[origin-com]` adds the live COM path.
origin-com = [
    "pywin32; sys_platform == 'win32'",
]
# Advanced statistics: GLM, survival analysis, Cox PH (gap #30). BSD-3 / MIT
# licensed. Optional so core install stays lean — calc/stats_glm.py and
# calc/stats_survival.py guard these imports; ROC is pure numpy and always
# available. `pip install quantized[stats]` enables GLM/survival methods.
stats = [
    "statsmodels>=0.14",
    "lifelines>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    # exercise the optional office exporters (#37) in CI
    "python-docx>=1.1",
    "python-pptx>=1.0",
    # exercise the optional stats methods (GLM/survival/Cox) in CI
    "statsmodels>=0.14",
    "lifelines>=0.27",
]
# Desktop packaging only — used by the release workflow to freeze the server
# into a self-contained sidecar (tools/bundle/qz-server.spec). Never a runtime
# dependency; CI installs it with `uv sync --group bundle`.
bundle = [
    "pyinstaller>=6.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantized"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Miller indices are conventionally named h, k, l — `l` is unavoidable and clear
# in crystallographic context (E741 "ambiguous variable name").
"src/quantized/calc/crystallography.py" = ["E741"]
"src/quantized/routes/crystallography.py" = ["E741"]
"tests/test_crystallography.py" = ["E741"]
"tests/test_calc_planespacings.py" = ["E741"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
# Third-party libs without bundled type stubs — skeleton-safe.
module = ["scipy.*", "uvicorn.*", "openpyxl.*", "h5py.*", "periodictable.*", "docx.*", "pptx.*", "mpl_toolkits.*", "win32com.*", "statsmodels.*", "lifelines.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "golden: compares output against frozen quantized_matlab reference values",
    "realdata: needs the local-only instrument corpus (auto-skips when absent)",
]
