[project]
name = "quantized-lab"
version = "0.10.0"
description = "Plot, analyze, and publish lab data - magnetometry, XRD, reflectometry - with OriginPro file interop, golden-verified analysis, and reproducible pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Paige Quarterman" }]
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.7",
    "openpyxl>=3.1",
    "h5py>=3.10",
    "python-multipart>=0.0.32",
    "matplotlib>=3.11.0",
    "periodictable>=1.7",
    "platformdirs>=4.10.0",
]

[project.urls]
Homepage = "https://github.com/pquarterman17/quantized"
Documentation = "https://github.com/pquarterman17/quantized/wiki"
Repository = "https://github.com/pquarterman17/quantized"
Releases = "https://github.com/pquarterman17/quantized/releases"
Issues = "https://github.com/pquarterman17/quantized/issues"

[project.scripts]
qz = "quantized.cli:main"
quantized = "quantized.cli:main"
diraculator = "quantized.cli:main_calc"

[project.optional-dependencies]
# Word/PowerPoint report export (#37). MIT-licensed, pure-python. Optional so
# the core install stays lean — io/report_export.py guards these imports and
# LaTeX/HTML export always work; `pip install quantized[office]` enables .docx/.pptx.
office = [
    "python-docx>=1.1",
    "python-pptx>=1.0",
]
# COM "Send to Origin" (item 25) — Windows-only optional, behind QZ_ORIGIN_COM=1
# (architecture guard #10: never a hard dependency, never a CI requirement).
# io/origin_com.py imports win32com lazily and guards its absence; the
# cross-platform fallback (Origin-ASCII / .ogs, always available) is
# io/origin.py. `pip install quantized[origin-com]` adds the live COM path.
origin-com = [
    "pywin32; sys_platform == 'win32'",
]
# `qz --desktop` native window (PORT_PLAN #3): pure-Python pywebview shell for
# dev/daily use; the Tauri shell (src-tauri/) stays the packaged path (W8).
# BSD-3 licensed. server_launch.py guards the import — without this extra,
# `qz --desktop` prints an install hint and every other mode works normally.
desktop = [
    "pywebview>=5.1",
]
# Advanced statistics: GLM, survival analysis, Cox PH (gap #30). BSD-3 / MIT
# licensed. Optional so core install stays lean — calc/stats_glm.py and
# calc/stats_survival.py guard these imports; ROC is pure numpy and always
# available. `pip install quantized[stats]` enables GLM/survival methods.
stats = [
    "statsmodels>=0.14",
    "lifelines>=0.27",
]
# Optional bumps fit engine (GOTO #10). BSD-3 licensed. calc/fit_bumps.py
# guards the import — the MATLAB-parity fitter (calc/fitting.py, golden-locked)
# stays the default engine everywhere; bumps adds amoeba/lm/de/dream as an
# ADDITIONAL engine. `pip install quantized[bumps]` enables it.
bumps = [
    "bumps>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.15.21",
    "mypy>=2.2.0",
    # exercise the optional office exporters (#37) in CI
    "python-docx>=1.1",
    "python-pptx>=1.0",
    # exercise the optional stats methods (GLM/survival/Cox) in CI
    "statsmodels>=0.14",
    "lifelines>=0.27",
    # exercise the optional bumps fit engine (GOTO #10) in CI
    "bumps>=1.0",
]
# Desktop packaging only — used by the release workflow to freeze the server
# into a self-contained sidecar (tools/bundle/qz-server.spec). Never a runtime
# dependency; CI installs it with `uv sync --group bundle`.
bundle = [
    "pyinstaller>=6.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling's default sdist has no include/exclude list, so it sweeps in the
# whole repo (frontend/node_modules alone is 5000+ files) — scope it to just
# what a build needs: the package sources (including src/quantized/web/, the
# gitignored Vite build output, and src/quantized/samples/, the bundled demo
# dataset — both walked from disk, not from git, so they're picked up when
# present) plus top-level metadata. Build the SPA BEFORE `uv build` / `python
# -m build` (`cd frontend && npm ci && npm run build`) or the wheel ships
# without a UI (qz still runs — see cli.py's "UI not built" warning).
[tool.hatch.build.targets.sdist]
include = ["src/quantized", "README.md", "LICENSE", "NOTICE"]
# Hatchling force-includes LICENSE*/README*-named files project-wide by
# default (a footgun here: every vendored npm package under
# frontend/node_modules ships its own LICENSE + README.md) — exclude wins
# over that default, so this is required even with the include list above.
exclude = ["frontend/**"]
# The Vite SPA output (src/quantized/web/**) is gitignored, so hatchling's
# VCS-aware sdist drops it even though it's under the `include` path above.
# `uv build`/`python -m build` build the WHEEL FROM THIS SDIST, so if the SPA
# is missing here it's missing from the wheel too (the wheel target's own
# artifacts= can't re-add what the sdist never carried). Force-include it in
# BOTH targets. (Regression fixed 2026-07-08: v0.5.0's wheel shipped UI-less.)
artifacts = ["src/quantized/web/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/quantized"]
# `packages` alone only reliably ships src/quantized/web/ when hatchling
# builds directly against a live git checkout; building the wheel FROM an
# sdist (what `uv build`/`python -m build` do by default, and what the
# publish workflow does) drops it, since that step can't see this repo's
# .git and treats the gitignored build output as excluded. `artifacts` is
# hatchling's explicit "include this even though it looks ignored" escape
# hatch — force it so the SPA ships in both the direct-build and
# build-from-sdist paths.
artifacts = ["src/quantized/web/**"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Miller indices are conventionally named h, k, l — `l` is unavoidable and clear
# in crystallographic context (E741 "ambiguous variable name").
"src/quantized/calc/crystallography.py" = ["E741"]
"src/quantized/routes/crystallography.py" = ["E741"]
"tests/test_crystallography.py" = ["E741"]
"tests/test_calc_planespacings.py" = ["E741"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
# Third-party libs without bundled type stubs — skeleton-safe.
module = ["scipy.*", "uvicorn.*", "openpyxl.*", "h5py.*", "periodictable.*", "docx.*", "pptx.*", "mpl_toolkits.*", "win32com.*", "statsmodels.*", "lifelines.*", "pandas.*", "webview.*", "bumps.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "golden: compares output against frozen quantized_matlab reference values",
    "realdata: needs the local-only instrument corpus (auto-skips when absent)",
    "perf: wall-time regression tripwires with generous ceilings (not benchmarks)",
]
